syntax = "proto3";

package selfie.media.v1;

import "common.proto";

service MediaService {
    rpc UploadMedia(UploadMediaRequest) returns (UploadMediaResponse);
    rpc GetMedia(GetMediaRequest) returns (GetMediaResponse);
    rpc DeleteMedia(DeleteMediaRequest) returns (DeleteMediaResponse);
    rpc GenerateThumbnail(GenerateThumbnailRequest) returns (GenerateThumbnailResponse);
    rpc OptimizeMedia(OptimizeMediaRequest) returns (OptimizeMediaResponse);
    rpc GetUploadUrl(GetUploadUrlRequest) returns (GetUploadUrlResponse);
}

enum MediaType {
    MEDIA_TYPE_UNSPECIFIED = 0;
    MEDIA_TYPE_IMAGE = 1;
    MEDIA_TYPE_VIDEO = 2;
    MEDIA_TYPE_AUDIO = 3;
}

message Media {
    string id = 1;
    string user_id = 2;
    MediaType type = 3;
    string url = 4;
    optional string thumbnail_url = 5;
    string content_type = 6;
    int64 size = 7;
    optional int32 width = 8;
    optional int32 height = 9;
    optional int32 duration = 10;
    selfie.common.v1.Timestamp created_at = 11;
}

message UploadMediaRequest {
    string user_id = 1;
    bytes data = 2;
    MediaType type = 3;
    string content_type = 4;
}

message UploadMediaResponse {
    Media media = 1;
}

message GetMediaRequest {
    string media_id = 1;
}

message GetMediaResponse {
    Media media = 1;
}

message DeleteMediaRequest {
    string media_id = 1;
    string user_id = 2;
}

message DeleteMediaResponse {
    bool success = 1;
}

message GenerateThumbnailRequest {
    string media_id = 1;
    int32 width = 2;
    int32 height = 3;
}

message GenerateThumbnailResponse {
    string thumbnail_url = 1;
}

message OptimizeMediaRequest {
    string media_id = 1;
    optional int32 target_size = 2;
    optional int32 quality = 3;
}

message OptimizeMediaResponse {
    Media optimized_media = 1;
}

message GetUploadUrlRequest {
    string user_id = 1;
    MediaType type = 2;
    string content_type = 3;
}

message GetUploadUrlResponse {
    string upload_url = 1;
    map<string, string> fields = 2;
    int64 expires_at = 3;
}